--- a/ansible/roles/dev/tasks/main.yml
+++ b/ansible/roles/dev/tasks/main.yml
@@ -4,3 +4,15 @@
   - tmux
   tags:
   - packages
+- name: Configure .bashrc for kubectl
+  blockinfile:
+    path: /home/{{ ansible_user }}/.bashrc
+    marker: "# {mark} KUBE TOOLS CONFIG"
+    block: |
+      source <(kubectl completion bash)
+      export KUBECONFIG="${HOME}/.kube/config"
+      for file in ${HOME}/.kube/*; do
+          if [[ -f ${file} && $(basename ${file}) == *'-config'* ]]; then
+              export KUBECONFIG="${KUBECONFIG}:${file}"
+          fi
+      done
