Add helm and kubeclient roles.

--- a/ansible/roles/dev/tasks/main.yml
+++ b/ansible/roles/dev/tasks/main.yml
@@ -2,17 +2,6 @@
   apt: name={{ item }} state=present
   with_items:
   - tmux
+  - vim
   tags:
   - packages
-- name: Configure .bashrc for kubectl
-  blockinfile:
-    path: /home/{{ ansible_user }}/.bashrc
-    marker: "# {mark} KUBE TOOLS CONFIG"
-    block: |
-      source <(kubectl completion bash)
-      export KUBECONFIG="${HOME}/.kube/config"
-      for file in ${HOME}/.kube/*; do
-          if [[ -f ${file} && $(basename ${file}) == *'-config'* ]]; then
-              export KUBECONFIG="${KUBECONFIG}:${file}"
-          fi
-      done
