Add tmuxline snapshot.

--- a/ansible/roles/dev/files/.tmux.conf
+++ b/ansible/roles/dev/files/.tmux.conf
@@ -1,4 +1,5 @@
 # source-file "${HOME}/.tmux-themepack/powerline/block/orange.tmuxtheme"
+source-file "${HOME}/.tmuxline.snapshot"
 set -g default-terminal "xterm-256color"
 setw -g mode-keys vi
 
