--- a/ansible/roles/dev/files/.tmux.conf
+++ b/ansible/roles/dev/files/.tmux.conf
@@ -1,7 +1,9 @@
-# source-file "${HOME}/.tmux-themepack/powerline/block/orange.tmuxtheme"
 source-file "${HOME}/.tmuxline.snapshot"
+
+set-option -g allow-rename off
 set -g default-terminal "xterm-256color"
 setw -g mode-keys vi
+set -g display-panes-time 2000
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
