--- a/ansible/roles/dev/files/.tmux.conf
+++ b/ansible/roles/dev/files/.tmux.conf
@@ -1,9 +1,10 @@
 source-file "${HOME}/.tmuxline.snapshot"
 
-set-option -g allow-rename off
+set -g allow-rename off
 set -g default-terminal "xterm-256color"
 setw -g mode-keys vi
 set -g display-panes-time 2000
+set -g history-limit 10000
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
