Upgrade to ansible v2.8. Add dev environment config for node.js and golang.

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -2,10 +2,12 @@
   hosts: homeserver
   gather_facts: True
   roles:
-  - basic
-  - fileserver
-  - dev
-  - espdev
-  - pydev
-  - helm
-  - kubeclient
+    - basic
+    - fileserver
+    - dev
+    - espdev
+    - pydev
+    - nodedev
+    - godev
+    - helm
+    - kubeclient
