--- a/ansible/roles/basic/tasks/main.yml
+++ b/ansible/roles/basic/tasks/main.yml
@@ -1,14 +1,22 @@
 - name: Install basic necessities
-  apt: name={{ item }} state=present
   become: yes
-  with_items:
-  - sshpass
-  - python
-  - python-pip
-  - python3
-  - python3-pip
-  - curl
-  - dnsutils
-  - ntp
-  tags:
-  - packages
+  apt:
+    name:
+    - sshpass
+    - python
+    - python-pip
+    - python3
+    - python3-pip
+    - curl
+    - dnsutils
+    - ntp
+    state: present
+    force_apt_get: yes
+- name: Configure .bashrc for globbing
+  blockinfile:
+    path: "/home/{{ ansible_user }}/.bashrc"
+    marker: "# {mark} GLOBBING CONFIG"
+    block: |
+      set +f
+      shopt -s extglob
+      shopt -s globstar
