Fix openebs path.

--- a/ansible/roles/kube/tasks/main.yml
+++ b/ansible/roles/kube/tasks/main.yml
@@ -10,4 +10,4 @@
 - name: Trigger creation of openebs state directory
   command: systemd-tmpfiles --clean
   args:
-    creates: /var/lib/openebs/local
+    creates: /var/openebs/local
